--- a/public/index.html
+++ b/public/index.html
@@ -15,42 +15,102 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
     <!-- Image for NAVbar -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
+
   <body>
     <!-- Top nav bar (fixed) -->
-   <div class ="parent">
-    <nav class='navigation'>
-      <div class = 'tweeter item'>tweeter</div> 
-      <div class = 'item2'><strong>Write</strong> a new tweet<br><i class="fas fa-angle-double-down arrow"></i>
-      </div>
-    </nav>
+   
 
-    <header class ="avatar">
-      <div>
-          <img src="/images/profile-hex.png"> 
+
+    <nav class='navigation'>
+      <div class ="parent">
+      <div class = 'tweeter item'>tweeter</div> 
+      <div class = 'item2'><strong>Write</strong> a new tweet<br>
+        <i class="fas fa-angle-double-down arrow"></i></div>
       </div>
-      <div>
-          <h2><strong>Your</strong> Name</h2>
-      </div>
-  </header></div>
+    </nav> 
+
+
+
+ 
 
     <!-- Page-specific (main) content here -->
+
+    <!-- avatar -->
     <main class="container">
-<h1> Hi </h1>
-<h2> You smell</h2>
-<p> like a beautiful prairie rose. </p>
+      <header class ="avatar">
+        <div>
+            <img src="/images/profile-hex.png"> 
+        </div>
+        <div>
+            <h2><strong>Your</strong> Name</h2>
+        </div>
+    </header>
+
+    <!-- Tweet input form  -->
+      <section class="new-tweet">
+        <form>
+          <form class="center" action='/tweets/' method="POST" id="wrapper">
+          <textarea name="text" id="tweet-text" class="tweetform" type="text" placeholder="What are you humming about?" id = "the-textarea"></textarea>
+          <div class = "parent">
+            <nav class='tweetbutton parent'>
+            <div class = 'item'>
+            <button type="submit" value="button" class="submitbutton">Tweet</button></form></div>
+            <div id="the-count">
+            <div class = 'item2'><output name="counter" class="counter" for="tweet-text" id="current">0</output></div></div>
+            </nav>
+          </div>
+        </form>
+      </section>
+
+      <!-- New Tweet -->
+
+      <!-- Top of new Tweet  -->
+      <section id="tweets">
+        <article class="articlebox">
+          <header class='tweetheader'>
+                <div><i class="fa-solid fa-crow"></i> Ms. Crow </div> <div class="lightcolor">@CrowFacts</div>
+      </header>
+
+<!-- // body of tweet  -->
+          <body class="tweetmain"><strong>Tweet written from input above. </strong></body>
+
+<!-- footer of tweet -->
+          <footer class ="tweetfooter smallfont"> 
+            <div class = 'item'>
+              1 year ago</div>
+            <div class = 'item2'>
+              <i class="fa-solid fa-flag icon"></i>
+              <i class="fa-solid fa-retweet icon"></i>
+              <i class="fa-regular fa-heart icon"></i>
+            </div>
+          </footer>
 
 
+        </article>
+      </section>
     </main>
+
+
+
   </body>
 </html>
+
+<!-- 
+
+    tweeter</div> 
+    <strong>Write</strong> a new tweet<br><i class="fas fa-angle-double-down arrow"></i>
+    
+  </nav> -->
