trying out jquer

--- a/public/index.html
+++ b/public/index.html
@@ -77,30 +77,28 @@
 
       <!-- New Tweet -->
 
-      <!-- Top of new Tweet  -->
-      <section id="tweets">
-        <article class="articlebox">
-          <header class='tweetheader'>
-                <div><i class="fa-solid fa-crow"></i> Ms. Crow </div> <div class="lightcolor">@CrowFacts</div>
-      </header>
-
-<!-- // body of tweet  -->
-          <body class="tweetmain"><strong>Tweet written from input above. </strong></body>
-
-<!-- footer of tweet -->
-          <footer class ="tweetfooter smallfont"> 
-            <div class = 'item'>
-              1 year ago</div>
+      <section id="tweets"> 
+        <article class = "tweetData articlebox"> 
+          <header class="user tweetheader">
+            <div class = "avatars name"><i class="fa-solid fa-crow"></i> Ms. Crow </div>
+            <div class = "handle lightcolor">@CrowFacts</div>
+          </header>
+        
+          <section class = "content tweetmain">
+            <div class = "text"><strong>Tweet written from input above.</strong></div>
+          </section>
+        
+          <footer class = "tweetfooter smallfont">
+            <div class ="item created_at">1 year ago</div>
             <div class = 'item2'>
               <i class="fa-solid fa-flag icon"></i>
               <i class="fa-solid fa-retweet icon"></i>
               <i class="fa-regular fa-heart icon"></i>
-            </div>
+             </div>
           </footer>
-
-
         </article>
-      </section>
+        </section>
+
     </main>
 
 
